<?xml version="1.0" encoding="utf-8"?>
<com.fuj.hangcity.widget.ScrollChildSwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_weather">
    <com.fuj.hangcity.widget.TranslucentScrollView
        android:id="@+id/weather_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/weather_firstRL"
                android:layout_width="match_parent"
                android:layout_height="500dp">
                <TextView
                    android:id="@+id/weather_humidityTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/weather_humidityTV"/>
                <TextView
                    android:id="@+id/weather_updateTimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/weather_updateTimeTV"/>
                <TextView
                    android:id="@+id/weather_tempertureTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/white"
                    android:textSize="100sp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/weather_tempertureTV"/>
                <TextView
                    android:id="@+id/weather_weatherTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/weather_tempertureTV"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/weather_weatherTV"/>
                <TextView
                    android:id="@+id/weather_windTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/weather_windTV"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/weather_tempCVTitleTV"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:background="@color/transparent"/>
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.fuj.hangcity.widget.TempertureCurveView
                    android:id="@+id/weather_tempertureCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"/>
            </HorizontalScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/weather_hourlyTitleTV"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:background="@color/transparent"/>
            <com.fuj.hangcity.widget.HourlyCurveView
                android:id="@+id/weather_hourlyCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:layout_marginTop="5dp"
                android:text="@string/weather_indexTitleTV"
                android:textColor="@color/white"
                android:background="@color/transparent"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/weather_indexRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/transparent">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </com.fuj.hangcity.widget.TranslucentScrollView>
</com.fuj.hangcity.widget.ScrollChildSwipeRefreshLayout>
