<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.main.MainActivity">
    <com.baidu.mapapi.map.MapView
        android:id="@+id/map_mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"/>
    <com.fuj.hangcity.widget.MapControlButton
        android:id="@+id/map_mapControlBTN"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="15dp" />
    <RelativeLayout
        android:id="@+id/scenic_detail_pannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <EditText
            android:id="@+id/scenic_detail_toET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/scenic_detail_addr"
            android:padding="8dp"
            android:background="@null"/>
        <EditText
            android:id="@+id/scenic_detail_fromET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/scenic_detail_me"
            android:layout_below="@id/scenic_detail_toET"
            android:padding="8dp"
            android:background="@null"/>
        <LinearLayout
            android:id="@+id/scenic_detail_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/scenic_detail_fromET">
            <Button
                android:id="@+id/scenic_detail_car"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scenic_detail_car"
                android:background="@null"/>
            <Button
                android:id="@+id/scenic_detail_bus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scenic_detail_bus"
                android:background="@null"/>
            <Button
                android:id="@+id/scenic_detail_walk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scenic_detail_walk"
                android:background="@null"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/scenic_detail_folded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_below="@id/scenic_detail_vehicle"
            android:src="@mipmap/ic_folded"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/scenic_detail_unfolded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:background="@color/white"
        android:src="@mipmap/ic_unfolded"
        android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/scenic_detail_step"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/scenic_detail_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:background="@color/white"
        android:src="@mipmap/ic_folded"
        android:layout_alignParentBottom="true"
        android:visibility="gone"/>
</RelativeLayout>